# basics-decision-tree

./: README.md  dt-basic-dev-environment.yml  pyproject.toml
notebooks/: basic_dt_0_theory.ipynb  basic_dt_1_classification.ipynb  basic_dt_1_classification_median.ipynb  basic_dt_2_regression.ipynb  basic_dt_2_regression_median.ipynb  basic_dt_3_classification_gini.ipynb  basic_dt_4_regression_variance.ipynb  basic_dt_5_clf_gini_optimal.ipynb  basic_dt_6_reg_gini_optimal.ipynb  basic_dt_6_reg_var_optimal.ipynb
notebooks/archive/: basic_dt_3_classification_gini_old.ipynb  basic_dt_4_classification_gini_vector.ipynb
